--- a/translations/ghost+intl-icu.es.xlf
+++ b/translations/ghost+intl-icu.es.xlf
@@ -1808,22 +1808,20 @@
       <notes>
         <note category="german">Ist diese Option aktiviert, haben frisch in Ghule verwandelte Bürger bereits Hunger.</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Ist diese Option aktiviert, haben frisch in Ghule verwandelte Bürger bereits Hunger.</source>
-        <target>Ist diese Option aktiviert, haben frisch in Ghule verwandelte Bürger bereits Hunger.</target>
+        <target>Cuando está activado, los mutantes recién transformados empiezan con un poco de hambre...</target>
       </segment>
     </unit>
     <unit id="v7CDf.f" name="Hungrige Ghule">
       <notes>
         <note category="german">Hungrige Ghule</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Hungrige Ghule</source>
-        <target>Hungrige Ghule</target>
+        <target>Mutantes Hambrientos</target>
       </segment>
     </unit>
   </file>
