--- a/translations/council+intl-icu.es.xlf
+++ b/translations/council+intl-icu.es.xlf
@@ -483,22 +483,22 @@
       <notes>
         <note category="german">Also meiner Meinung nach passt das gut zu ihm.</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Also meiner Meinung nach passt das gut zu ihm.</source>
-        <target>Also meiner Meinung nach passt das gut zu ihm.</target>
+        <target>Le queda perfecto, qué diantre.</target>
       </segment>
     </unit>
     <unit id="qhU79vJ" name="Lasst uns hiermit nicht herumalbern!">
       <notes>
         <note category="german">Lasst uns hiermit nicht herumalbern!</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Lasst uns hiermit nicht herumalbern!</source>
-        <target>Lasst uns hiermit nicht herumalbern!</target>
+        <target>De ningún modo, ¡no jueguen con esto!</target>
       </segment>
     </unit>
     <unit id="T0PPdf1">
@@ -545,11 +545,11 @@
       <notes>
         <note category="german">Diejenigen von euch, die nach uns kommen, verhärtet nicht eure Herzen gegen uns...</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Diejenigen von euch, die nach uns kommen, verhärtet nicht eure Herzen gegen uns...</source>
-        <target>Diejenigen von euch, die nach uns kommen, verhärtet nicht eure Herzen gegen uns...</target>
+        <target>Ustedes que vendrán después, no endurezcan sus corazones contra nosotros...</target>
       </segment>
     </unit>
     <unit id="uViO4s_" name="Wer keine Hoffnung mehr hat, kann auch nichts mehr bereuen.">
@@ -596,22 +596,22 @@
       <notes>
         <note category="german">Nimm einfach einen Strohhalm und bring es hinter dich!</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Nimm einfach einen Strohhalm und bring es hinter dich!</source>
-        <target>Nimm einfach einen Strohhalm und bring es hinter dich!</target>
+        <target>¡Solo escoge una pajita y termina con esto de una vez!</target>
       </segment>
     </unit>
     <unit id="R_l996G" name="Ja, ja, jetzt gib mir schon einen verfluchten Strohhalm!">
       <notes>
         <note category="german">Ja, ja, jetzt gib mir schon einen verfluchten Strohhalm!</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Ja, ja, jetzt gib mir schon einen verfluchten Strohhalm!</source>
-        <target>Ja, ja, jetzt gib mir schon einen verfluchten Strohhalm!</target>
+        <target>Sí, sí, ¡dame una maldita pajita de una vez!</target>
       </segment>
     </unit>
     <unit id="ymFvTVo" name="Ok, lasst uns wie immer Strohhalme ziehen und die Sache hinter uns bringen.">
@@ -798,7 +798,7 @@
       <notes>
         <note category="german">...</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>...</source>
@@ -819,18 +819,18 @@
       <notes>
         <note category="german">Er war sowieso schon ziemlich seltsam...</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Er war sowieso schon ziemlich seltsam...</source>
-        <target>Er war sowieso schon ziemlich seltsam...</target>
+        <target>Ya era bastante extraño para empezar...</target>
       </segment>
     </unit>
     <unit id="Xmv_w5z" name="Pfffffff">
       <notes>
         <note category="german">Pfffffff</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Pfffffff</source>
@@ -851,11 +851,11 @@
       <notes>
         <note category="german">Ich wusste es!</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Ich wusste es!</source>
-        <target>Ich wusste es!</target>
+        <target>¡Lo sabía!</target>
       </segment>
     </unit>
     <unit id="mc42RuE">
@@ -872,11 +872,11 @@
       <notes>
         <note category="german">Da unser Schamane heute Nacht von uns gegangen ist, müssen wir jetzt einen Ersatz wählen.</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Da unser Schamane heute Nacht von uns gegangen ist, müssen wir jetzt einen Ersatz wählen.</source>
-        <target>Da unser Schamane heute Nacht von uns gegangen ist, müssen wir jetzt einen Ersatz wählen.</target>
+        <target>Considerando que nuestro último Chamán nos abandonó en la última noche, ¡necesitamos otro lo antes posible!</target>
       </segment>
     </unit>
     <unit id="MkDFsuH">
@@ -943,11 +943,11 @@
       <notes>
         <note category="german">Kommt schon, so verzweifelt sind wir noch nicht!</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Kommt schon, so verzweifelt sind wir noch nicht!</source>
-        <target>Kommt schon, so verzweifelt sind wir noch nicht!</target>
+        <target>¡Vamos, no estamos tan desesperados aún!</target>
       </segment>
     </unit>
     <unit id="rNmTTZf" name="Was genau ist überhaupt ein Schamane?">
@@ -1014,11 +1014,11 @@
       <notes>
         <note category="german">Super, eine neue Wahl eines Schamanen!</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Super, eine neue Wahl eines Schamanen!</source>
-        <target>Super, eine neue Wahl eines Schamanen!</target>
+        <target>Bien, ¡una nueva elección para el puesto de Chamán!</target>
       </segment>
     </unit>
     <unit id="boIkn0D" name="Also ich schlage unseren Freund {voted} vor, der einfach soooo gerne redet.">
@@ -1115,11 +1115,11 @@
       <notes>
         <note category="german">Oh Mann, wir sind komplett im Arsch!</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Oh Mann, wir sind komplett im Arsch!</source>
-        <target>Oh Mann, wir sind komplett im Arsch!</target>
+        <target>Hombre, ¡estamos tan jodidos!</target>
       </segment>
     </unit>
     <unit id="xXxoI6E" name="Pff, der überlebt die Nacht doch eh nicht....">
@@ -1146,11 +1146,11 @@
       <notes>
         <note category="german">Wie buchstabiert man das eigentlich: Schamane oder Schamahne?</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Wie buchstabiert man das eigentlich: Schamane oder Schamahne?</source>
-        <target>Wie buchstabiert man das eigentlich: Schamane oder Schamahne?</target>
+        <target>¿Cómo dices que se dice: Chamán o Shaman?</target>
       </segment>
     </unit>
     <unit id="tARf0rq">
@@ -1177,11 +1177,11 @@
       <notes>
         <note category="german">Mann, ich wollte die Vorstellung übernehmen!</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Mann, ich wollte die Vorstellung übernehmen!</source>
-        <target>Mann, ich wollte die Vorstellung übernehmen!</target>
+        <target>¡Yo estaba haciendo la introducción!</target>
       </segment>
     </unit>
     <unit id="01.aYA6" name="Leck mich doch!">
@@ -1198,11 +1198,11 @@
       <notes>
         <note category="german">Gepriesen sei der Schamane!</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">madeup</note>
       </notes>
       <segment>
         <source>Gepriesen sei der Schamane!</source>
-        <target>Gepriesen sei der Schamane!</target>
+        <target>¡Bendito sea el Chamán!</target>
       </segment>
     </unit>
     <unit id="Um.KsRt" name="Was ist ein Schaaaar Maaane?">
@@ -1239,11 +1239,11 @@
       <notes>
         <note category="german">Da unser geliebter Reiseleiter in der Außenwelt uns heute Nacht verlassen hat, müssen wir ab sofort einen neuen wählen.</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Da unser geliebter Reiseleiter in der Außenwelt uns heute Nacht verlassen hat, müssen wir ab sofort einen neuen wählen.</source>
-        <target>Da unser geliebter Reiseleiter in der Außenwelt uns heute Nacht verlassen hat, müssen wir ab sofort einen neuen wählen.</target>
+        <target>Considerando que nuestro querido Guía al Ultramundo nos abandonó en la última noche, ¡necesitamos otro lo antes posible!</target>
       </segment>
     </unit>
     <unit id="fOYoWJh">
