--- a/translations/admin+intl-icu.de.xlf
+++ b/translations/admin+intl-icu.de.xlf
@@ -1182,7 +1182,7 @@
     </unit>
     <unit id="bC01IWH" name="Löschen">
       <notes>
-        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/admin/widget/controls.twig</note>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig;twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/admin/widget/controls.twig</note>
       </notes>
       <segment>
         <source>Löschen</source>
@@ -4445,6 +4445,42 @@
       <segment>
         <source>{num} Städte betroffen</source>
         <target>{num} Städte betroffen</target>
+      </segment>
+    </unit>
+    <unit id="D_SOjKp" name="Du siehst aktuell gelöschte Meldungen.">
+      <notes>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
+      </notes>
+      <segment>
+        <source>Du siehst aktuell gelöschte Meldungen.</source>
+        <target>Du siehst aktuell gelöschte Meldungen.</target>
+      </segment>
+    </unit>
+    <unit id="KIO8WN8" name="Zurück zur Meldungsübersicht">
+      <notes>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
+      </notes>
+      <segment>
+        <source>Zurück zur Meldungsübersicht</source>
+        <target>Zurück zur Meldungsübersicht</target>
+      </segment>
+    </unit>
+    <unit id="mP7gm7N" name="Möchtest du bereits gelöschte Meldungen durchsuchen?">
+      <notes>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
+      </notes>
+      <segment>
+        <source>Möchtest du bereits gelöschte Meldungen durchsuchen?</source>
+        <target>Möchtest du bereits gelöschte Meldungen durchsuchen?</target>
+      </segment>
+    </unit>
+    <unit id="V5OxsLs" name="Zum Papierkorb">
+      <notes>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
+      </notes>
+      <segment>
+        <source>Zum Papierkorb</source>
+        <target>Zum Papierkorb</target>
       </segment>
     </unit>
   </file>
