--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -1166,7 +1166,7 @@
     <unit id="bC01IWH" name="Löschen">
       <notes>
         <note category="german">Löschen</note>
-        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/admin/widget/controls.twig</note>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig;twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/admin/widget/controls.twig</note>
       </notes>
       <segment>
         <source>Löschen</source>
@@ -4736,6 +4736,46 @@
       <segment>
         <source>{num} Städte betroffen</source>
         <target>{num} towns affected</target>
+      </segment>
+    </unit>
+    <unit id="D_SOjKp" name="Du siehst aktuell gelöschte Meldungen.">
+      <notes>
+        <note category="german">Du siehst aktuell gelöschte Meldungen.</note>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
+      </notes>
+      <segment>
+        <source>Du siehst aktuell gelöschte Meldungen.</source>
+        <target>You're currently viewing deleted reports.</target>
+      </segment>
+    </unit>
+    <unit id="KIO8WN8" name="Zurück zur Meldungsübersicht">
+      <notes>
+        <note category="german">Zurück zur Meldungsübersicht</note>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
+      </notes>
+      <segment>
+        <source>Zurück zur Meldungsübersicht</source>
+        <target>Back to the overview</target>
+      </segment>
+    </unit>
+    <unit id="mP7gm7N" name="Möchtest du bereits gelöschte Meldungen durchsuchen?">
+      <notes>
+        <note category="german">Möchtest du bereits gelöschte Meldungen durchsuchen?</note>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
+      </notes>
+      <segment>
+        <source>Möchtest du bereits gelöschte Meldungen durchsuchen?</source>
+        <target>Need to look at already deleted reports?</target>
+      </segment>
+    </unit>
+    <unit id="V5OxsLs" name="Zum Papierkorb">
+      <notes>
+        <note category="german">Zum Papierkorb</note>
+        <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
+      </notes>
+      <segment>
+        <source>Zum Papierkorb</source>
+        <target>Open recycle bin</target>
       </segment>
     </unit>
   </file>
