--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -3900,5 +3900,14 @@
         <target>Diskussion aktualisieren</target>
       </segment>
     </unit>
+    <unit id="kmZd3k9" name="Support-Postfach">
+      <notes>
+        <note category="from">twig:///templates/ajax/pm/view.html.twig</note>
+      </notes>
+      <segment>
+        <source>Support-Postfach</source>
+        <target>Support-Postfach</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
