--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -4236,5 +4236,15 @@
         <target>Refresh the discussion</target>
       </segment>
     </unit>
+    <unit id="kmZd3k9" name="Support-Postfach">
+      <notes>
+        <note category="german">Support-Postfach</note>
+        <note category="from">twig:///templates/ajax/pm/view.html.twig</note>
+      </notes>
+      <segment>
+        <source>Support-Postfach</source>
+        <target>Support Inbox</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
