--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -3909,5 +3909,14 @@
         <target>Support-Postfach</target>
       </segment>
     </unit>
+    <unit id="l1ILLYu">
+      <notes>
+        <note category="from">twig:///templates/scripts/errors/generic.txt.twig</note>
+      </notes>
+      <segment>
+        <source>Du hast diese Aktion bereits zu oft durchgeführt. Warte eine Weile und versuche es dann erneut.</source>
+        <target>Du hast diese Aktion bereits zu oft durchgeführt. Warte eine Weile und versuche es dann erneut.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
