--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -4246,5 +4246,15 @@
         <target>Support Inbox</target>
       </segment>
     </unit>
+    <unit id="l1ILLYu">
+      <notes>
+        <note category="german">Du hast diese Aktion bereits zu oft durchgeführt. Warte eine Weile und versuche es dann erneut.</note>
+        <note category="from">twig:///templates/scripts/errors/generic.txt.twig</note>
+      </notes>
+      <segment>
+        <source>Du hast diese Aktion bereits zu oft durchgeführt. Warte eine Weile und versuche es dann erneut.</source>
+        <target>You've performed this action too often. Wait for a bit and then try again.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
