--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4677,77 +4677,77 @@
       <notes>
         <note category="german">MyHordes-Seele wiederherstellen</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>MyHordes-Seele wiederherstellen</source>
-        <target>MyHordes-Seele wiederherstellen</target>
+        <target>Restaurer l’âme MyHordes</target>
       </segment>
     </unit>
     <unit id="Qgq13W4" name="Seele zurückgesetzt">
       <notes>
         <note category="german">Seele zurückgesetzt</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Seele zurückgesetzt</source>
-        <target>Seele zurückgesetzt</target>
+        <target>Réinitialisation d'âme</target>
       </segment>
     </unit>
     <unit id="WCGHAE6" name="{num} Städte betroffen">
       <notes>
         <note category="german">{num} Städte betroffen</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>{num} Städte betroffen</source>
-        <target>{num} Städte betroffen</target>
+        <target>{num} villes affectées</target>
       </segment>
     </unit>
     <unit id="D_SOjKp" name="Du siehst aktuell gelöschte Meldungen.">
       <notes>
         <note category="german">Du siehst aktuell gelöschte Meldungen.</note>
         <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Du siehst aktuell gelöschte Meldungen.</source>
-        <target>Du siehst aktuell gelöschte Meldungen.</target>
+        <target>Vous affichez actuellement les signalements supprimés.</target>
       </segment>
     </unit>
     <unit id="KIO8WN8" name="Zurück zur Meldungsübersicht">
       <notes>
         <note category="german">Zurück zur Meldungsübersicht</note>
         <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Zurück zur Meldungsübersicht</source>
-        <target>Zurück zur Meldungsübersicht</target>
+        <target>Retour à la vue d’ensemble</target>
       </segment>
     </unit>
     <unit id="mP7gm7N" name="Möchtest du bereits gelöschte Meldungen durchsuchen?">
       <notes>
         <note category="german">Möchtest du bereits gelöschte Meldungen durchsuchen?</note>
         <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Möchtest du bereits gelöschte Meldungen durchsuchen?</source>
-        <target>Möchtest du bereits gelöschte Meldungen durchsuchen?</target>
+        <target>Besoin de regarder les signalements déjà supprimés ?</target>
       </segment>
     </unit>
     <unit id="V5OxsLs" name="Zum Papierkorb">
       <notes>
         <note category="german">Zum Papierkorb</note>
         <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Zum Papierkorb</source>
-        <target>Zum Papierkorb</target>
+        <target>Ouvrir la corbeille</target>
       </segment>
     </unit>
   </file>
