FR translations for moderation PMs

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -23128,33 +23128,33 @@ cette violente opération...]]></target>
       <notes>
         <note category="german">Ein Moderator hat eine Beschränkung für deinen Account festgelegt, da du gegen eine oder mehrere unserer Verhaltensregeln verstoßen hast.&lt;br/&gt;Art der Beschränkung: &lt;b&gt;{type}&lt;/b&gt;&lt;br/&gt;Grund: &lt;i&gt;{reason}&lt;/i&gt;&lt;br /&gt;Dauer: &lt;i&gt;{duration}&lt;/i&gt;</note>
         <note category="from">db://LogEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Ein Moderator hat eine Beschränkung für deinen Account festgelegt, da du gegen eine oder mehrere unserer Verhaltensregeln verstoßen hast.&lt;br/&gt;Art der Beschränkung: &lt;b&gt;{type}&lt;/b&gt;&lt;br/&gt;Grund: &lt;i&gt;{reason}&lt;/i&gt;&lt;br /&gt;Dauer: &lt;i&gt;{duration}&lt;/i&gt;</source>
-        <target><![CDATA[Ein Moderator hat eine Beschränkung für deinen Account festgelegt, da du gegen eine oder mehrere unserer Verhaltensregeln verstoßen hast.<br/>Art der Beschränkung: <b>{type}</b><br/>Grund: <i>{reason}</i><br />Dauer: <i>{duration}</i>]]></target>
+        <target><![CDATA[Un modérateur a appliqué une restriction à votre compte parce que vous avez enfreint une ou plusieurs de nos règles de conduite.<br/> Limitation : <b>{type}</b><br/>Raison : <i>{reason}</i><br />Durée : <i>{duration}</i>]]></target>
       </segment>
     </unit>
     <unit id="MZuvd1.">
       <notes>
         <note category="german">Ein Moderator hat die Dauer einer Beschränkung, die für deinen Account festgelegt war, geändert.&lt;br/&gt;Art der Beschränkung: &lt;b&gt;{type}&lt;/b&gt;&lt;br/&gt;Alte Dauer: &lt;i&gt;{old_duration}&lt;/i&gt;&lt;br /&gt;Neue Dauer: &lt;i&gt;{duration}&lt;/i&gt;</note>
         <note category="from">db://LogEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Ein Moderator hat die Dauer einer Beschränkung, die für deinen Account festgelegt war, geändert.&lt;br/&gt;Art der Beschränkung: &lt;b&gt;{type}&lt;/b&gt;&lt;br/&gt;Alte Dauer: &lt;i&gt;{old_duration}&lt;/i&gt;&lt;br /&gt;Neue Dauer: &lt;i&gt;{duration}&lt;/i&gt;</source>
-        <target><![CDATA[Ein Moderator hat die Dauer einer Beschränkung, die für deinen Account festgelegt war, geändert.<br/>Art der Beschränkung: <b>{type}</b><br/>Alte Dauer: <i>{old_duration}</i><br />Neue Dauer: <i>{duration}</i>]]></target>
+        <target><![CDATA[Un modérateur a modifié la durée d’une restriction définie pour votre compte.<br/> Limitation : <b>{type}</b><br/>Ancienne durée : <i>{old_duration}</i><br />Nouvelle durée : <i>{duration}</i>]]></target>
       </segment>
     </unit>
     <unit id="RZ4FfGa">
       <notes>
         <note category="german">Ein Moderator hat eine Beschränkung für deinen Account aufgehoben.&lt;br/&gt;Art der Beschränkung: &lt;b&gt;{type}&lt;/b&gt;</note>
         <note category="from">db://LogEntryTemplate</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Ein Moderator hat eine Beschränkung für deinen Account aufgehoben.&lt;br/&gt;Art der Beschränkung: &lt;b&gt;{type}&lt;/b&gt;</source>
-        <target><![CDATA[Ein Moderator hat eine Beschränkung für deinen Account aufgehoben.<br/>Art der Beschränkung: <b>{type}</b>]]></target>
+        <target><![CDATA[Un modérateur a supprimé une restriction sur votre compte.<br/> Limitation : <b>{type}</b>]]></target>
       </segment>
     </unit>
   </file>
