--- a/translations/welcome+intl-icu.es.xlf
+++ b/translations/welcome+intl-icu.es.xlf
@@ -188,7 +188,7 @@
       </notes>
       <segment>
         <source>Alles Wissenswerte über deine Stadt erfährst du jeden Tag im "Leichsblatt"...</source>
-        <target>El cuervo y el boletín, "El Cadáver Matutino", te darán una actualización diaria sobre los desafortunados sucesos en tu pueblo...</target>
+        <target>El Cuervo y el boletín, "El Cadáver Matutino", te darán una actualización diaria sobre los desafortunados sucesos en tu pueblo...</target>
       </segment>
     </unit>
     <unit id="wGyzZMF">
