--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4529,7 +4529,7 @@
       </notes>
       <segment>
         <source>Stadtnamen regenerieren</source>
-        <target>Regenerar nombre del pueblo</target>
+        <target>Regenerar el nombre del pueblo</target>
       </segment>
     </unit>
     <unit id="cUEl3DK" name="Sprache wechseln">
